--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
